[package]
name = "rusty_todos"
version = "0.0.1"
edition = "2021"

[dependencies]
tokio = {version = "1", features = ["full"]}
futures = "0.3"
thiserror = "1.0"
# JSON libs
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
# WEB libs
warp = "0.3"
# DB libs
sqlx = {version = "0.6.2", features = ["runtime-tokio-rustls", "postgres"]}
sqlb = "0.0.8"
